Fixed Logo Width on Mobile View

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
     }
 }
 
-@media (max-width: 750px) {
+@media (max-width: 768px) {
     header nav .links > * {
         display: none;
     }
@@ -30,6 +30,10 @@
     }
     .menu-icon:hover {
         background-color: #ddd;
+    }
+    .left img {
+        height: auto;
+        width: 25vw;
     }
     .hero__home {
         height: 90vh;
